Добавляет анимацию на карточки, и текст на карточки секции чем мы занимаемся

--- a/index.html
+++ b/index.html
@@ -67,9 +67,24 @@
             <div class="container">
                 <h2 class="main-title">Чем мы занимаемся</h2>
                 <ul class="list presentation">
-                    <li class="presentation-foto"><img src="./img/box1.jpg" width="370" height="294" alt="фото как мы работаем" class="indent-reset"></li>
-                    <li class="presentation-foto"><img src="./img/box2.jpg" width="370" height="294" alt="фото как мы работаем" class="indent-reset"></li>
-                    <li class="presentation-foto"><img src="./img/box3.jpg" width="370" height="294" alt="фото как мы работаем" class="indent-reset"></li> 
+                    <li class="presentation-foto">
+                            <img src="./img/box1.jpg" width="370" height="294" alt="фото как мы работаем" class="indent-reset">
+                        <div class="tumb">
+                            <p class="tumb-text">Десктопные приложения</p>
+                        </div>
+                    </li>
+                    <li class="presentation-foto">
+                            <img src="./img/box2.jpg" width="370" height="294" alt="фото как мы работаем" class="indent-reset">
+                        <div class="tumb">
+                            <p class="tumb-text">Мобильные приложения</p>
+                        </div>
+                    </li>
+                    <li class="presentation-foto">
+                            <img src="./img/box3.jpg" width="370" height="294" alt="фото как мы работаем" class="indent-reset">
+                        <div class="tumb">
+                            <p class="tumb-text">Дизайнерские решения</p>
+                        </div>
+                    </li> 
                 </ul>
             </div>
         </section>
