--- a/portfolio.html
+++ b/portfolio.html
@@ -53,64 +53,99 @@
             </ul>
         <ul class="list-projekt">
             <li class="list list-projekt-card"> 
-                    <a href="" class="link link-projekt"> 
-                        <img src="./img/foto.portfolio/img.jpg" width="370" height="294" alt="Наши проекты">
+                    <a href="" class="link link-projekt">
+                        <div class="tumb-projekt">
+                            <img src="./img/foto.portfolio/img.jpg" width="370" height="294" alt="Наши проекты">
+                            <p class="tumb-projekt-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                     <div class="projekt-card">
                         <h3 class="title-prject">Технокряк</h3>
                         <p class="menu-text">Веб-сайт</p>
                     </div></a>
             </li>
             <li class="list list-projekt-card">
-                    <a href="" class="link link-projekt"><img src="./img/foto.portfolio/img1.jpg" width="370" height="294" alt="Наши проекты">
+                    <a href="" class="link link-projekt">
+                        <div class="tumb-projekt">
+                            <img src="./img/foto.portfolio/img1.jpg" width="370" height="294" alt="Наши проекты">
+                            <p class="tumb-projekt-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                     <div class="projekt-card">
                         <h3 class="title-prject">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                         <p class="menu-text">Дизайн</p>
                     </div></a>
             </li>
                 <li class="list list-projekt-card">
-                    <a href="" class="link link-projekt"><img src="./img/foto.portfolio/img2.jpg" width="370" height="294" alt="Наши проекты">
+                    <a href="" class="link link-projekt">
+                        <div class="tumb-projekt">
+                            <img src="./img/foto.portfolio/img2.jpg" width="370" height="294" alt="Наши проекты">
+                            <p class="tumb-projekt-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                     <div class="projekt-card">
                         <h3 class="title-prject">Ресторан <span lang="en">Seafood</span></h3>
                         <p class="menu-text">Приложение</p>
                     </div></a>
                 </li>
                 <li class="list list-projekt-card">
-                    <a href="" class="link link-projekt"><img src="./img/foto.portfolio/img3.jpg" width="370" height="294" alt="Наши проекты">
+                    <a href="" class="link link-projekt">
+                        <div class="tumb-projekt">
+                            <img src="./img/foto.portfolio/img3.jpg" width="370" height="294" alt="Наши проекты">
+                            <p class="tumb-projekt-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                     <div class="projekt-card">
                         <h3 class="title-prject">Проект <span lang="en">Prime</span></h3>
                         <p class="menu-text">Маркетинг</p>
                     </div></a>
                 </li>
                 <li class="list list-projekt-card">
-                    <a href="" class="link link-projekt"><img src="./img/foto.portfolio/img4.jpg" width="370" height="294" alt="Наши проекты">
+                    <a href="" class="link link-projekt">
+                        <div class="tumb-projekt">
+                            <img src="./img/foto.portfolio/img4.jpg" width="370" height="294" alt="Наши проекты">
+                            <p class="tumb-projekt-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                     <div class="projekt-card">
                         <h3 class="title-prject">Проект <span lang="en">Boxes</span></h3>
                         <p class="menu-text">Приложение</p>
                     </div></a>
                 </li>
                 <li class="list list-projekt-card">
-                    <a href="" class="link link-projekt"><img src="./img/foto.portfolio/img5.jpg" width="370" height="294" alt="Наши проекты">
+                    <a href="" class="link link-projekt">
+                        <div class="tumb-projekt">
+                            <img src="./img/foto.portfolio/img5.jpg" width="370" height="294" alt="Наши проекты">
+                            <p class="tumb-projekt-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                     <div class="projekt-card">
                         <h3 class="title-prject" lang="en">Inspiration has no Borders</h3>
                         <p class="menu-text">Веб-сайт</p>
                     </div></a>
                 </li>
                 <li class="list list-projekt-card">
-                    <a href="" class="link link-projekt"><img src="./img/foto.portfolio/img6.jpg" width="370" height="294" alt="Наши проекты">
+                    <a href="" class="link link-projekt">
+                        <div class="tumb-projekt">
+                            <img src="./img/foto.portfolio/img6.jpg" width="370" height="294" alt="Наши проекты">
+                            <p class="tumb-projekt-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                     <div class="projekt-card">
                         <h3 class="title-prject">Издание <span lang="en">Limited Edition</span></h3>
                         <p class="menu-text">Дизайн</p>
                     </div></a>
                 </li>
                 <li class="list list-projekt-card">
-                    <a href="" class="link link-projekt"><img src="./img/foto.portfolio/img7.jpg" width="370" height="294" alt="Наши проекты">
+                    <a href="" class="link link-projekt">
+                        <div class="tumb-projekt">
+                            <img src="./img/foto.portfolio/img7.jpg" width="370" height="294" alt="Наши проекты">
+                            <p class="tumb-projekt-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                     <div class="projekt-card">
                         <h3 class="title-prject">Проект <span lang="en">LAB</span></h3>
                         <p class="menu-text">Маркетинг</p>
                     </div></a>
                 </li>
                 <li class="list list-projekt-card">
-                    <a href="" class="link link-projekt"><img src="./img/foto.portfolio/img8.jpg" width="370" height="294" alt="Наши проекты">
+                    <a href="" class="link link-projekt">
+                        <div class="tumb-projekt">
+                            <img src="./img/foto.portfolio/img8.jpg" width="370" height="294" alt="Наши проекты">
+                            <p class="tumb-projekt-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                     <div class="projekt-card">
                         <h3 class="title-prject" lang="en">Growing Business</h3>
                         <p class="menu-text">Приложение</p>
