Исправляет замечания ментора

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button class="button-modal" data-modal-close><svg width="11" height="11" class="buttom-close"><use href="./img/sprite.svg#icon-close-black" ></use></svg></button>
+            <button class="button-modal" data-modal-close><svg width="18" height="18" class="button-close"><use href="./img/sprite.svg#icon-close-black" ></use></svg></button>
         </div>
     </div>
     <script src="./js/modal.js"></script>
